<resources>
    <string name="app_name">Shopping App</string>
    <string name="enter_your_phone_number_for_otp_verification">Enter your phone number for OTP verification</string>
    <string name="_91">+91</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="_continue">CONTINUE</string>
    <string name="setting">Setting</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="verify">VERIFY</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="don_t_get_the_otp">Didn\'t get the OTP?</string>
    <string name="_91_1234567890">+91–1234567890</string>
    <string name="enter_your_received_otp_here">Enter OTP that you have received</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="user_name">User Name</string>
    <string name="message">Message</string>
    <string name="for_creating_account_you_need_to_provide_mobile_number_for_verification">To continue you need to provide Phone Number for verification.</string>
    <string name="enter_your_mobile_number">Phone Number</string>
    <string name="verify_number">VERIFY NUMBER</string>
    <!--    <string name="choose_profile_photo">Choose Profile Photo</string>-->
    <!--    <string name="enter_your_name_here">Enter Your Name Here</string>-->
    <string name="save">SAVE</string>
    <string name="didn_t_received_change_your_number">Didn\'t Received ?</string>
    <string name="user_status">User Status</string>
    <string name="sender_message">Sender Message</string>
    <string name="_20_09">20:09</string>
    <string name="enter_otp_here">enter OTP here</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="product_price"> <strike>$2000</strike> </string>
    <string name="otp">OTP</string>
    <string name="phone_number">Phone Number</string>
    <string name="product_name">Product Name</string>
    <string name="_24_00">$24.00</string>
    <string name="remove">remove</string>
    <string name="category_name">Category Name</string>
    <string name="your_name">Your Name</string>
    <string name="my_cart">My Cart</string>
    <string name="your_order">Your Order</string>
    <string name="your_order_history">Your Order History</string>
    <string name="settings">Settings</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="all_products">All Products</string>
    <string name="product_description">Product Description</string>
    <string name="_1500">$1500</string>
    <string name="_50_off">50% Off</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="goto_to_cart">GOTO To Cart</string>
    <string name="add_cart">Add Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_name">City Name</string>
    <string name="_918459002519">+918459002519</string>
    <string name="state_name">State Name</string>
    <string name="pin_code">Pin code</string>
    <string name="address">Address</string>
    <string name="done">DONE</string>
</resources>