<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.fragments.FragmentProductDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="12dp"
            android:elevation="33dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/ivSlider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                app:iss_auto_cycle="false"
                app:iss_delay="0"
                app:iss_period="1000" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway"
            android:padding="8dp"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/tvProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/raleway"
            android:padding="8dp"
            android:text="@string/product_description"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway"
            android:padding="8dp"
            android:text="@string/product_price"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProductDescription" />

        <TextView
            android:id="@+id/tvProductSellingPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway"
            android:padding="8dp"
            android:text="@string/_1500"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tvProductPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvProductDescription" />

        <TextView
            android:id="@+id/tvDiscount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway"
            android:padding="8dp"
            android:text="@string/_50_off"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvProductSellingPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvProductDescription" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/raleway"
            android:text="@string/goto_to_cart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProductSellingPrice" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/raleway"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProductSellingPrice" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>