<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.OtpVerificationActivity">

    <TextView
        android:id="@+id/tvH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/h1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/iv1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/splash_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvH1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/otp"
        android:padding="5dp"
        app:boxStrokeColor="@color/light_blue"
        app:hintTextColor="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOTP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/raleway"
        android:text="@string/didn_t_received_change_your_number"
        android:textColor="@color/black"
        android:textSize="@dimen/h2"
        app:layout_constraintEnd_toStartOf="@+id/tvResendOTP"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout" />

    <TextView
        android:id="@+id/tvResendOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/resend_otp"
        android:textColor="@color/black"
        android:textSize="@dimen/h2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_background"
        android:text="@string/verify"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/inputLayout"
        app:layout_constraintEnd_toEndOf="@+id/inputLayout"
        app:layout_constraintStart_toStartOf="@+id/inputLayout"
        app:layout_constraintTop_toTopOf="@+id/inputLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>