<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="50dp"
    android:layout_marginVertical="3dp"
    android:layout_marginHorizontal="5dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:scaleType="fitCenter"
            android:layout_margin="3dp"
            android:src="@drawable/ic_image" />
        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:text="@string/product_name"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:text="@string/product_description"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:text="@string/product_price"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>