<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:elevation="50dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:scaleType="fitCenter"
            android:layout_margin="3dp"
            android:src="@drawable/ic_image" />

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:text="@string/product_name"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/raleway"
                android:gravity="center"
                android:background="@drawable/button_background"
                android:layout_weight="1"
                android:padding="3dp"
                android:layout_marginHorizontal="3dp"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDelete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:fontFamily="@font/raleway"
                android:gravity="center"
                android:padding="3dp"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:text="@string/remove"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>