<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".ui.fragments.FragmentUserAccount">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:elevation="50dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivAccount"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/ic_account"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/raleway"
                android:text="@string/user_name"
                android:padding="5dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMyOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:elevation="50dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:id="@+id/tvMyCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawablePadding="8dp"
            android:fontFamily="@font/raleway"
            android:padding="8dp"
            android:text="@string/my_cart"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_cart"
            app:drawableTint="@color/black" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardOrderHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:elevation="50dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawablePadding="8dp"
            android:fontFamily="@font/raleway"
            android:padding="8dp"
            android:text="@string/your_order_history"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_history" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:elevation="50dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawablePadding="8dp"
            android:fontFamily="@font/raleway"
            android:padding="8dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_settings" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTermsAndConditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:elevation="50dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawablePadding="8dp"
            android:fontFamily="@font/raleway"
            android:padding="8dp"
            android:text="@string/terms_amp_conditions"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_conditions" />
    </androidx.cardview.widget.CardView>


</LinearLayout>