<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.FragmentUserAddress">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:hint="@string/your_name"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/raleway"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/inputName"
        android:hint="@string/_918459002519"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="3dp"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/raleway"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputCityName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/inputNumber"
        android:hint="@string/city_name"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="3dp"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCityName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/raleway"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputStateName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/inputCityName"
        android:hint="@string/state_name"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etStateName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/raleway"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPinCode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/inputStateName"
        android:hint="@string/pin_code"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPinCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/raleway"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputAddress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="3dp"
        android:layout_gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/inputPinCode"
        android:hint="@string/address"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/raleway"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnProceedToPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:text="PROCEED TO PAY"
        android:fontFamily="@font/raleway"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAddress" />


</androidx.constraintlayout.widget.ConstraintLayout>